--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanjil</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hi !</h1>
-    <h2>Its a Danger</h2>
+    <h1>Hello, I am Tanzil</h1>
 </body>
 </html>
