--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 </head>
 <body>
     <h1>Hello, I am Tanzil</h1>
-    <p>hey ! It's a very Pretty </p>
-    <input type="text">
-    <br>
-    <button>Click me</button>
-    <h3>Hello</h3>
+    <p>hey ! You are so Pretty Girl</p>
 </body>
 </html>
