--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Hello, I am Tanzil</h1>
     <p>hey ! You are so Pretty Girl</p>
+    <input type="password">
+    <br>
+    <button>Click me</button>
 </body>
 </html>
